--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ h11==0.14.0
 httplib2==0.22.0
 idna==3.10
 iniconfig==2.1.0
--e git+ssh://git@github.com/justt1n/pa_itemku.git@c2468f956bc50f1d3d99c9d17a2900a453cf3f19#egg=itemku_tl
+-e git+ssh://git@github.com/justt1n/pa_itemku.git@85914594f303937b35fe541dd79cb18a0b501c0a#egg=itemku_tl
 Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -45,6 +45,7 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.10.6
 pydantic_core==2.27.2
+PyExecJS==1.5.1
 Pygments==2.19.1
 pynose==1.5.4
 pyotp==2.9.0
@@ -57,7 +58,6 @@ pytest-ordering==0.6
 pytest-rerunfailures==15.0
 pytest-xdist==3.6.1
 python-dotenv==1.0.1
-python-xlib==0.33
 pytz==2025.1
 PyYAML==6.0.2
 requests==2.32.3
@@ -77,6 +77,7 @@ tenacity==9.1.2
 trio==0.29.0
 trio-websocket==0.12.2
 typing_extensions==4.13.2
+undetected-chromedriver==3.5.5
 uritemplate==4.2.0
 urllib3==2.3.0
 webdriver-manager==4.0.2
